Convert Scikit-Learn model to ONNX format

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -260,101 +260,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_vector = get_random_digit().reshape(1, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please provide your username: hello@andyjakubowski.com\n",
-      "Please type your password: ········\n",
-      "Would you like us to store your user credentials (y/n)? y\n",
-      "Your model was successfully uploaded to Scailable!\n",
-      "NOTE: After transpiling, we will send you an email and your model will be available at https://admin.sclbl.net.\n",
-      "Or, alternatively, you can use the 'endpoints()' function to list all your uploaded models. \n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs = {}\n",
-    "docs['name'] = \"Random forest MNIST demo\"\n",
-    "docs['documentation'] = \"#My Random forest MNIST demo.\"\n",
+    "# feature_vector = get_random_digit().reshape(1, -1)\n",
+    "# docs = {}\n",
+    "# docs['name'] = \"Random forest MNIST demo\"\n",
+    "# docs['documentation'] = \"#My Random forest MNIST demo.\"\n",
     "\n",
-    "sp.upload(forest, feature_vector, docs=docs)"
+    "# sp.upload(forest, feature_vector, docs=docs)\n",
+    "# sp.endpoints()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert model to ONNX format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You currently do not own any active endpoints.\n",
-      "\n",
-      "Need help getting started?\n",
-      " - See the sclblpy docs at https://pypi.org/project/sclblpy/.\n",
-      " - See our getting started tutorial at https://github.com/scailable/sclbl-tutorials/tree/master/sclbl-101-getting-started.\n",
-      " - Or, login to your admin at https://admin.sclbl.net. \n",
-      "\n",
-      "NOTE: if you have just uploaded a model, please check your email; we will let you know when its available!\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[]"
+       "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sp.endpoints()"
+    "forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Convert into ONNX format\n",
+    "from skl2onnx import convert_sklearn\n",
+    "from skl2onnx.common.data_types import FloatTensorType\n",
+    "initial_type = [('X', FloatTensorType([None, X_train.shape[1]]))]\n",
+    "onx = convert_sklearn(forest, initial_types=initial_type)\n",
+    "with open(\"rf_mnist.onnx\", \"wb\") as f:\n",
+    "    f.write(onx.SerializeToString())\n",
+    "\n",
+    "# Compute the prediction with ONNX Runtime\n",
+    "import onnxruntime as rt\n",
+    "import numpy\n",
+    "sess = rt.InferenceSession(\"rf_mnist.onnx\")\n",
+    "input_name = sess.get_inputs()[0].name\n",
+    "label_name = sess.get_outputs()[0].name\n",
+    "pred_onx = sess.run([label_name], {input_name: X_test.astype(numpy.float32)})[0]"
+   ]
   },
   {
    "cell_type": "code",
